objects/SC_CaseExtension__c.object
<CustomObject>
    <description>Custom object to associate with Case to extend case details.</description>
    <fields>
        <fullName>RSC_CampaignPriority__c</fullName>
        <description>This will be rollup of Campaign Priority from Associated Contract Extension</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_CaseNumber__c</fullName>
        <description>This field will hold the Pinball Case number from Horizon</description>
        <label>Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAddressCity__c</fullName>
        <description>This field will hold the information that was captured on City in BPO during onboarding.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAddressLine1__c</fullName>
        <description>This field will hold the information that was captured on Address Line 1 in BPO during onboarding</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAddressLine2__c</fullName>
        <description>This field will hold the information that was captured on Address Line 2 in BPO during onboarding</description>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAddressLine3__c</fullName>
        <description>This field will hold the information that was captured on Address Line 3 in BPO during onboarding.</description>
        <label>Address Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAddressPostalCode__c</fullName>
        <description>Post code for physical address of policy holder.</description>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientAlternateCellNumber__c</fullName>
        <description>This field will hold the alternative Mobile phone number of the client</description>
        <label>Client Alternate Cell Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_ClientBirthDate__c</fullName>
        <description>This field is used to store the date of birth of the client.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSC_ClientBusinessNumber__c</fullName>
        <description>Field to store the business number of client.</description>
        <label>Business Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_ClientCellNumber__c</fullName>
        <description>This field will hold the Mobile phone number of the client.</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_ClientEmail__c</fullName>
        <description>This field is used to capture the email address of the client.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSC_ClientFirstName__c</fullName>
        <description>This field is used to capture the first name of the client.</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientHomeNumber__c</fullName>
        <description>Field to capture the home number of client.</description>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_ClientIdentificationNumber__c</fullName>
        <description>This field will hold the identification number of the client.</description>
        <label>Identification Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientSuburb__c</fullName>
        <description>This field will hold the Client&apos;s Residential Suburb</description>
        <label>Client Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientSurname__c</fullName>
        <description>This field will hold the last name of the client.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientTitle__c</fullName>
        <description>This field will hold the Title of the client</description>
        <label>Title</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_HomeTelephoneNumber__c</fullName>
        <description>This field will hold the Home phone number of the client</description>
        <label>Home Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_MasterContractNumber__c</fullName>
        <description>This field will hold the Associated Policy number generated at Onboarding Stage</description>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PersonalityDatabaseIdentityNumber__c</fullName>
        <description>This field will hold the Personality Database ID that is linked to the client</description>
        <label>PDB ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PostalAddressCode__c</fullName>
        <description>Post code for postal address of policy holder.</description>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PostalAddressLine1__c</fullName>
        <description>Postal address i.e. Correspondence address line 1 of policy holder.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PostalAddressLine2__c</fullName>
        <description>Postal address i.e. Correspondence address line 2 of policy holder.</description>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PostalAddressLine3__c</fullName>
        <description>Postal address i.e. Correspondence address line 3 of policy holder.</description>
        <label>Address Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PreferredContactTime__c</fullName>
        <description>This field will hold the Prefered comntact time during which the client should be contacted</description>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Rank__c</fullName>
        <description>This field is used to indicate the rank of the campaign.</description>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Segment__c</fullName>
        <description>Welcome Call ad-hoc to store the Welcome Call&apos;s segment</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affluent Mature</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Young Achiever</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_WorkTelephoneNumber__c</fullName>
        <description>This field will hold the alternative Home phone number of the client</description>
        <label>Work Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_AgentRegion__c</fullName>
        <description>This field stores the Agent&apos;s region</description>
        <label>Agent Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_AlternateTelephoneNumber__c</fullName>
        <description>This field will hold any other alternative phone number of the client</description>
        <label>Alternate Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_AlternativeContactTime__c</fullName>
        <description>This field will hold the alternative contact time that the Client can be contacted</description>
        <label>Alternative Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_CaseRecordType__c</fullName>
        <description>This stores the record type of the related case.</description>
        <label>Case Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Gender__c</fullName>
        <description>This field will hold the Gender of the client</description>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_NurseRegion__c</fullName>
        <description>This field will hold the Nurse&apos;s Region if the Nurse was already selected during onboarding</description>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_NurseSuburbOrTown__c</fullName>
        <description>This field will hold the Nurse&apos;s Suburb that they have been assigned to if they have been selected during onboarding.</description>
        <label>Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_RequestType__c</fullName>
        <description>This is a External Source Field from Pinball</description>
        <label>Request Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Schema__c</fullName>
        <description>This is a External Source Field from Pinball</description>
        <label>Schema</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_SequenceNumber__c</fullName>
        <description>This field will hold the sequence number that indicates if the policy is new (1) or if the appointment is for an existing policy(2)</description>
        <label>Sequence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_SourceType__c</fullName>
        <description>This is a External Source Field from Pinball</description>
        <label>Source Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Source__c</fullName>
        <description>Defines Campaign Source.
Related to 324598</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_UACFID__c</fullName>
        <description>This field will hold the UACFID of the person who has logged the request.</description>
        <label>UACF ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Username__c</fullName>
        <description>This is a External Source Field from Pinball</description>
        <label>Username</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_WorkType__c</fullName>
        <description>This is a External Source Field from Pinball</description>
        <label>Work Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Case Extension</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Case Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Extensions</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>SC_MedicalAppointment</fullName>
        <active>true</active>
        <description>Represents Medical Appointment for clients.</description>
        <label>Medical Appointment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>